@@ -1,5 +1,15 @@
 2011-01-29  Cameron Zwarich  <zwarich@apple.com>
 
+        Reviewed by David Kilzer.
+
+        Bug 53374 - Remove uses of unsafe string functions in debugging code
+        https://bugs.webkit.org/show_bug.cgi?id=53374
+
+        * runtime/RegExp.cpp:
+        (JSC::RegExp::printTraceData):
+
+2011-01-29  Cameron Zwarich  <zwarich@apple.com>
+
         Reviewed by Oliver Hunt.
 
         JavaScriptCoreUseJIT environment variable broken
